# audio-transcription

./: .dockerignore  .gitignore  .setup.ignore  Dockerfile  Dockerfile.rocm  Dockerfile.rocm64  Dockerfile.rocm72  README.md  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml  pytorch_gpu_test.py
backend/: requirements.txt
backend/app/: main.py  schemas.py  transcribe.py
backend/tests/: test_backend.py
frontend/: index.html  package-lock.json  package.json
frontend/public/: config.js
frontend/src/: App.tsx  config.ts  styles.css
frontend/src/api/: wsClient.ts
frontend/src/pages/: DisplayPage.tsx  TranscriptionPage.tsx  V2APage.tsx
frontend/src/types/: events.ts  runtimeConfig.d.ts
