[project]
name = "audio-transcription"
version = "0.1.0"
description = ""
authors = [
    { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.8",
    "uvicorn[standard]==0.34.0",
    "python-multipart==0.0.20",
    "pydantic==2.10.6",
    "faster-whisper==1.2.1",
    "numpy>=1.26,<3.0",
]

[project.optional-dependencies]
test = [
    "pytest==8.3.4",
    "httpx==0.28.1",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
